// Original file: exa/index_pb/index.proto

import type { ScoredContextItem as _exa_index_pb_ScoredContextItem, ScoredContextItem__Output as _exa_index_pb_ScoredContextItem__Output } from '../../exa/index_pb/ScoredContextItem';

export interface GetNearestCCIsFromEmbeddingResponse {
  'scoredContextItems'?: (_exa_index_pb_ScoredContextItem)[];
}

export interface GetNearestCCIsFromEmbeddingResponse__Output {
  'scoredContextItems': (_exa_index_pb_ScoredContextItem__Output)[];
}
