// Original file: exa/index_pb/index.proto

import type { RemoteIndexStats as _exa_index_pb_RemoteIndexStats, RemoteIndexStats__Output as _exa_index_pb_RemoteIndexStats__Output } from '../../exa/index_pb/RemoteIndexStats';

export interface GetRemoteIndexStatsResponse {
  'indexStats'?: (_exa_index_pb_RemoteIndexStats)[];
}

export interface GetRemoteIndexStatsResponse__Output {
  'indexStats': (_exa_index_pb_RemoteIndexStats__Output)[];
}
