// Original file: exa/index_pb/index.proto

export const IndexingStatus = {
  INDEXING_STATUS_UNSPECIFIED: 'INDEXING_STATUS_UNSPECIFIED',
  INDEXING_STATUS_ERROR: 'INDEXING_STATUS_ERROR',
  INDEXING_STATUS_QUEUED: 'INDEXING_STATUS_QUEUED',
  INDEXING_STATUS_CLONING_REPO: 'INDEXING_STATUS_CLONING_REPO',
  INDEXING_STATUS_SCANNING_REPO: 'INDEXING_STATUS_SCANNING_REPO',
  INDEXING_STATUS_GENERATING_EMBEDDINGS: 'INDEXING_STATUS_GENERATING_EMBEDDINGS',
  INDEXING_STATUS_VECTOR_INDEXING: 'INDEXING_STATUS_VECTOR_INDEXING',
  INDEXING_STATUS_DONE: 'INDEXING_STATUS_DONE',
  INDEXING_STATUS_CANCELING: 'INDEXING_STATUS_CANCELING',
  INDEXING_STATUS_CANCELED: 'INDEXING_STATUS_CANCELED',
} as const;

export type IndexingStatus =
  | 'INDEXING_STATUS_UNSPECIFIED'
  | 0
  | 'INDEXING_STATUS_ERROR'
  | 1
  | 'INDEXING_STATUS_QUEUED'
  | 2
  | 'INDEXING_STATUS_CLONING_REPO'
  | 3
  | 'INDEXING_STATUS_SCANNING_REPO'
  | 4
  | 'INDEXING_STATUS_GENERATING_EMBEDDINGS'
  | 5
  | 'INDEXING_STATUS_VECTOR_INDEXING'
  | 6
  | 'INDEXING_STATUS_DONE'
  | 7
  | 'INDEXING_STATUS_CANCELING'
  | 8
  | 'INDEXING_STATUS_CANCELED'
  | 9

export type IndexingStatus__Output = typeof IndexingStatus[keyof typeof IndexingStatus]
