// Original file: exa/index_pb/index.proto


export interface ManagementMetadata {
  'authToken'?: (string);
  'authUid'?: (string);
  'serviceKey'?: (string);
  'forceTargetPublicIndex'?: (boolean);
  'forceTeamId'?: (string);
  'serviceKeyId'?: (string);
}

export interface ManagementMetadata__Output {
  'authToken': (string);
  'authUid': (string);
  'serviceKey': (string);
  'forceTargetPublicIndex': (boolean);
  'forceTeamId': (string);
  'serviceKeyId': (string);
}
